--- a/css/main_style.css
+++ b/css/main_style.css
@@ -6,3 +6,26 @@
     background: #333;
     color: #efefef;
 }
+
+.darkmode-c {
+    position: relative;
+    display: block;
+}
+
+.darkmode-c input[type="checkbox"]{
+    position: absolute;
+    opacity: 0;
+    width: 3cm;
+    height: 1cm;
+    vertical-align: middle;
+}
+
+.darkmode-c input[type="checkbox"] + button{
+    display: block;
+    color: #333;
+    border: 2px solid #333;
+    border-radius: 0.5rem;
+    padding: 0.5rem;
+    width: 3cm;
+    height: 1cm;
+}
