--- a/css/main_style.css
+++ b/css/main_style.css
@@ -27,10 +27,12 @@
 	text-align: center;
 	line-height: 1;
 	transition: .2s;
-    .darkmode{
-        background: #333;
-    }
 }
+
+.dark-theme .darkmode_toggle label{
+    background: #444;
+}
+
 .darkmode_toggle label:first-of-type{
 	border-radius: 7px 0 0 7px;
 }
