--- a/css/main_style.css
+++ b/css/main_style.css
@@ -14,6 +14,10 @@
     display: none;
 }
 
+.darkmode_toggle{
+    background: #bdc3c7;
+}
+
 .darkmode_toggle label{
 	display: block;
 	float: left;
@@ -21,6 +25,7 @@
 	width: 60px;
 	margin: 0;
 	padding: 10px;
+    margin: 5px;
 	background: #bdc3c7;
 	color: #869198;
 	font-size: 16px;
@@ -28,14 +33,16 @@
 	line-height: 1;
 	transition: .2s;
 }
-
-.dark-theme .darkmode_toggle label{
-    background: #444;
-}
-
 .darkmode_toggle label:first-of-type{
-	border-radius: 7px 0 0 7px;
+	border-radius: 7px 7px 7px 7px;
 }
 .darkmode_toggle label:last-of-type{
-	border-radius: 0 7px 7px 0;
+	border-radius: 7px 7px 7px 7px;
+}
+
+.darkmode_toggle input[type="radio"]:checked + .switch_light {
+	background-color: #efefef;
+}
+.darkmode_toggle input[type="radio"]:checked + .switch_dark {
+	background-color: #333;
 }
